# visionitframework

./: .gitignore  AI_GUIDE.md  COMMENT_FAIRE.md  DEPLOY_QUICK.md  DOCUMENTATION.md  HTML_MODERNE.md  LANCER_APPS.md  LICENSE  MAC_GUIDE.md  MANIFEST.in  PYPI_DEPLOY.md  README.md  TROUBLESHOOTING.md  pyproject.toml  setup.cfg  setup.py  test_mac_window.py
.github/workflows/: ci.yml  publish.yml
demo_window/: README.md  build.json  main.py  main_mac.py
demo_window/templates/: index.html
demo_window/templates/components/: card.html
test_final/: .gitignore  README.md  build.json  main.py  package.txt  run.sh
test_final/db/: schema.prisma
test_final/static/icons/: README.md
test_final/templates/components/: input.html  navbar.html
tests/: __init__.py  test_cli.py
text_editor_app/: README.md  build.json  main.py
text_editor_app/templates/components/: alert.html  button.html
visionit/: __init__.py  cli.py  desktop_window.py
visionit/templates/: base.html
visionit/templates/components/: footer.html  modal.html
