[metadata]
name = visionit
version = 0.1.0
author = Vision IT
author_email = contact@visionit.com
description = VisionIT Framework - Rapid application scaffolding for Python 3.9+
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/visionit/visionit
project_urls =
    Bug Tracker = https://github.com/visionit/visionit/issues
    Source Code = https://github.com/visionit/visionit
    Documentation = https://github.com/visionit/visionit/blob/main/DOCUMENTATION.md
keywords = scaffold, boilerplate, nicegui, prisma, rapid-development, cli
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    typer>=0.9.0
    questionary>=2.0.0
    click>=8.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=23.0.0
    ruff>=0.1.0
build =
    pyinstaller>=6.0.0
    build>=1.0.0
    twine>=4.0.0

[options.entry_points]
console_scripts =
    visionit = visionit.cli:main

[options.package_data]
visionit = 
    templates/*.html
    templates/components/*.html

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = -v --tb=short

[flake8]
max-line-length = 100
exclude = venv,build,dist,.git,__pycache__

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
